--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="FirstApp">
   <head>
     <meta charset="utf-8">
+    <script src="angular.min.js"></script>
+    <script src=="app.js"></script>
     <title>Hello Coursera</title>
   </head>
   <body>
-    <h1>Hello Coursera!</h1>
+    <h1>Angular JS APP</h1>
+    <div ng-controller="FirstController">
+        {{name}}
+    </div>
   </body>
 </html>
